src/test/deca/syntax/valid/afficher_Hello.deca
// Description:
//    Code syntaxiquement correct pour verifier println
//
// Resultats:
//
// Historique:
//    cree le 04/01/2023

{
    
    println("hello", "", "world");
}
