src/test/deca/syntax/invalid/MismatchedAsm.deca
// Description:
//    asm method
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

class a {
	int a;
	void set() asm { "ffff" };
}
